fix: add spacing to content below topbar
because the actual topbar has a fixed position, we need an empty
element of the same height to force the elements below it to
render lower, and not in the same space as, the topbar

[Ticket: FPY-12]

--- a/src/components/organisms/ui/topbar/topbar.module.scss
+++ b/src/components/organisms/ui/topbar/topbar.module.scss
@@ -1,5 +1,8 @@
 @import "../../../../styles/resources.scss";
 
+.fakeTopbar {
+  height: 64px;
+}
 .topbar {
   position: fixed;
   left: 0;
